# AdventOfCode

./: .gitignore  README.md  pyproject.toml
2015/day_01/: day_01.py
2015/day_02/: day_02.py
2015/day_03/: day_03.py
2015/day_04/: day_04.py
2015/day_05/: day_05.py
2015/day_06/: day_06.py
2015/day_07/: day_07.py
2015/day_08/: day_08.py
2015/day_09/: day_09.py
2015/day_10/: day_10.py
2015/day_11/: day_11.py
2015/day_12/: day_12.py
2015/day_13/: day_13.py
2023/day_01/: day_01.py
2023/day_02/: day_02.py
2023/day_03/: day_03.py
2023/day_04/: day_04.py
2023/day_05/: day_05.py
2023/day_06/: day_06.py
2023/day_07/: day_07.py
2023/day_08/: day_08.py
2023/day_09/: day_09.py
2023/day_10/: day_10.py
2023/day_11/: day_11.py
2023/day_12/: day_12.py
2023/day_13/: day_13.py
2023/day_14/: day_14.py
2023/day_15/: day_15.py
2023/day_16/: day_16.py
2023/day_17/: day_17.py
2023/day_18/: day_18.py
2023/day_19/: day_19.py
2023/day_20/: day_20.py
2023/day_21/: day_21.py
2023/day_22/: day_22.py
2023/day_23/: day_23.py
2023/day_24/: day_24.py
2023/day_25/: day_25.py
2024/day_01/: day_01.py
2024/day_02/: day_02.py
2024/day_03/: day_03.py
2024/day_04/: day_04.py
2024/day_05/: day_05.py
2024/day_06/: day_06.py
2024/day_07/: day_07.py
2024/day_08/: day_08.py
2024/day_09/: day_09.py
2024/day_10/: day_10.py
2024/day_11/: day_11.py
2024/day_12/: day_12.py
2024/day_13/: day_13.py
2024/day_14/: day_14.py
2024/day_15/: day_15.py
2024/day_16/: day_16.py
aoc/: day_template.py  main.py
(+27 files in other folders)
