[project]
name = "adventofcode"
description = "Advent of Code utilities"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Jonathan Matarazzi"},
]
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[options]
packages = ["aoc", "aoc.helpers"]

[project.scripts]
aoc = "aoc.main:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "adventofcode",
]

[tool.uv.sources]
adventofcode = { workspace = true }
